packages/coln-compiler/test/monoid-glog.output
-- elaborated


-- messages

error[E0201]: identifier Type not in scope
2 |   car : Type
2 |         ^^^^
